add copyright to footer section

--- a/index.html
+++ b/index.html
@@ -160,23 +160,26 @@
 	<footer>
 		<!-- Contact information -->
 		<div id="contacts">
-			<h4>Contact us</h4>
-			<ul>
-				<li><i class="fa fa-map-marker"></i>Kilimani, Nairobi Kenya</li>
-				<li><i class="fa fa-phone"></i>(+254) 123-4567</li>
-				<li><i class="fa fa-envelope"></i>info@bigstoneholdings.com</li>
-			</ul>
+		  <h4>Contact us</h4>
+		  <ul>
+			<li><i class="fa fa-map-marker"></i>Kilimani, Nairobi Kenya</li>
+			<li><i class="fa fa-phone"></i>(+254) 123-4567</li>
+			<li><i class="fa fa-envelope"></i>info@bigstoneholdings.com</li>
+		  </ul>
 		</div>
-		<!--Social media links -->
+		<!-- Social media links -->
 		<div id="social">
-			<h4>Follow us</h4>
-			<ul>
-				<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-				<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-				<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-			</ul>
+		  <h4>Follow us</h4>
+		  <ul>
+			<li><a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
+			<li><a href="https://www.twitter.com/"><i class="fa fa-twitter"></i></a></li>
+		  </ul>
 		</div>
-	</footer>
+		<!-- Copyright -->
+		<div id="copyright">
+		  <p>&copy; 2023 BigStone Holdings. All Rights Reserved.</p>
+		</div>
+	  </footer>
     <script src="index.js"></script>
 </body>
 </html>
