--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <h1>Welcome To BigStone Tech Innovations</h1>
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="product.html">Products</a></li>
-				<li><a href="contact.html">Contact</a></li>
-				<li><a href="about.html">About</a></li>
+				<li><a href="index.html">Products</a></li>
+				<li><a href="index.html">Contact</a></li>
+				<li><a href="index.html">About</a></li>
 			</ul>
 		</nav>
 		<!-- Homepage banner -->
@@ -165,14 +165,6 @@
 			<li><i class="fa fa-map-marker"></i>Kilimani, Nairobi Kenya</li>
 			<li><i class="fa fa-phone"></i>(+254) 123-4567</li>
 			<li><i class="fa fa-envelope"></i>info@bigstoneholdings.com</li>
-		  </ul>
-		</div>
-		<!-- Social media links -->
-		<div id="social">
-		  <h4>Follow us</h4>
-		  <ul>
-			<li><a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
-			<li><a href="https://www.twitter.com/"><i class="fa fa-twitter"></i></a></li>
 		  </ul>
 		</div>
 		<!-- Copyright -->
